[Mac] Fullscreen layout issues

- Fixed the incorrect y offset for tab detached windows in fullscreen
- Fixed the layout issue with the infobar in fullscreen

BUG=670445,678204

Review-Url: https://codereview.chromium.org/2666213003
Cr-Commit-Position: refs/heads/master@{#447804}

Former-commit-id: a7140be113cefff6413d285e9bce20b513f52686