chrome/browser/ui/cocoa/browser_window_controller_private.mm
@@ -53,6 +53,7 @@
 #include "components/prefs/scoped_user_pref_update.h"
 #include "content/public/browser/render_widget_host_view.h"
 #include "content/public/browser/web_contents.h"
+#include "ui/base/cocoa/appkit_utils.h"
 #import "ui/base/cocoa/focus_tracker.h"
 #import "ui/base/cocoa/nsview_additions.h"
 #include "ui/base/ui_base_types.h"
@@ -966,12 +967,20 @@ willPositionSheet:(NSWindow*)sheet
 
 - (void)updateSubviewZOrderFullscreen {
   base::scoped_nsobject<NSMutableArray> subviews([[NSMutableArray alloc] init]);
+
+  // The infobar should overlay the toolbar if the toolbar is fully shown.
+  FullscreenToolbarLayout layout = [fullscreenToolbarController_ computeLayout];
+  BOOL shouldInfoBarOverlayToolbar =
+      ui::IsCGFloatEqual(layout.toolbarFraction, 1.0);
+
   if ([downloadShelfController_ view])
     [subviews addObject:[downloadShelfController_ view]];
   if ([self tabContentArea])
     [subviews addObject:[self tabContentArea]];
-  if ([infoBarContainerController_ view])
+
+  if (!shouldInfoBarOverlayToolbar && [infoBarContainerController_ view])
     [subviews addObject:[infoBarContainerController_ view]];
+
   if ([self placeBookmarkBarBelowInfoBar]) {
     if ([bookmarkBarController_ view])
       [subviews addObject:[bookmarkBarController_ view]];
@@ -983,8 +992,13 @@ willPositionSheet:(NSWindow*)sheet
     if ([bookmarkBarController_ view])
       [subviews addObject:[bookmarkBarController_ view]];
   }
+
   if ([toolbarController_ view])
     [subviews addObject:[toolbarController_ view]];
+
+  if (shouldInfoBarOverlayToolbar && [infoBarContainerController_ view])
+    [subviews addObject:[infoBarContainerController_ view]];
+
   if ([findBarCocoaController_ view])
     [subviews addObject:[findBarCocoaController_ view]];
 
